checkpoint, updating database with relevant items and api
